[workspace]
resolver = "2"
members = [
	"node",
	"pallets/*",
	"runtime/mandala",
	"./runtime/niskala",
	"runtime/niskala",
	"primitives",
]


[profile.release]
panic = "unwind"

[workspace.dependencies]
substrate-wasm-builder = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-utility = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-multisig = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
frame-benchmarking = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-basic-authorship = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-chain-spec = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-cli = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-client-api = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-offchain = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-consensus = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-executor = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-network = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-network-sync = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-rpc = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-service = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-sysinfo = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-telemetry = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-tracing = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-transaction-pool = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-api = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-block-builder = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-blockchain = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-consensus-aura = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-core = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-keystore = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-io = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-runtime = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
sp-timestamp = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
try-runtime-cli = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }

# Polkadot
polkadot-cli = { git = "https://github.com/MandalaChain/polkadot-sdk", features = [
	"rococo-native",
], branch = "mandala-polkadot-v1.7.2", default-features = false }
polkadot-primitives = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-client-service = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-primitives-core = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
color-print = "0.3.4"
sp-genesis-builder = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }


codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
hex-literal = { version = "0.4.1" }
log = { version = "0.4.19", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
smallvec = "1.11.0"
blake2-rfc = { version = "0.2.18", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4.3", default-features = false }


# Substrate
frame-executive = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
frame-support = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
frame-system = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
frame-system-benchmarking = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
frame-system-rpc-runtime-api = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
frame-try-runtime = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-aura = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-authorship = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-balances = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-session = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-sudo = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-timestamp = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-transaction-payment = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-inherents = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-offchain = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-session = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-std = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-transaction-pool = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-version = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
# Polkadot
pallet-xcm = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
polkadot-parachain = { package = "polkadot-parachain-bin", git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
polkadot-runtime-common = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
xcm = { package = "staging-xcm", git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
pallet-message-queue = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
parachains-common = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
sp-runtime-interface = { git = "https://github.com/MandalaChain/polkadot-sdk", default-features = false, branch = "mandala-polkadot-v1.7.2" }
orml-traits = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", branch = "moonbeam-polkadot-v1.7.2", default-features = false }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-collator-selection = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-client-collator = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }

serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }

# Build
substrate-build-script-utils = { git = "https://github.com/MandalaChain/polkadot-sdk", branch = "mandala-polkadot-v1.7.2", default-features = false }

# EVM
pallet-evm = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-ethereum = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }

fp-account = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
fp-evm = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
fp-rpc = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
fp-self-contained = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }


pallet-base-fee = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/MandalaChain/frontier", branch = "mandala-polkadot-v1.7.2", default-features = false }
